[project]
name = "heygem-mw"
description = "HeyGem AI avatar."
version = "1.0.3"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/billwuhao/Comfyui_HeyGem"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mw"
DisplayName = "Comfyui_HeyGem"
Icon = ""
